--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Hong Kong"
-  employer         : "The Chinese University of Hong Kong"
+  employer         : "Chinese University of Hong Kong"
   uri              : # URL
   email            : "xzhao@se.cuhk.edu.hk" 
 
